[workspace]
resolver = "2"
members = ["mxp", "mud-bin-examples", "mud-stream", "mud-transformer"]

[workspace.package]
version = "0.10.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
recursive_format_impl = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"

[workspace.dependencies]
flagset = "0.4.6"
serde = "1.0.204"
