[workspace]
resolver = "2"
members = ["mxp", "mud-bin-examples", "mud-stream", "mud-transformer"]

[workspace.package]
version = "0.13.1"
repository = "https://github.com/jnbooth/mxp"
license = "MIT"
edition = "2024"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"

[workspace.dependencies]
bytes = "1.11.0"
flagset = "0.4.7"
html-escape = "0.2.13"
serde = "1.0.228"
