[package]
name = "mud-bin-examples"
version = "0.4.5"
edition = "2021"

[lints]
workspace = true

[dependencies]
bytes = "1.6.0"
mud-transformer = { path = "../mud-transformer" }
mud-stream = { path = "../mud-stream", features = ["async", "sync"] }
tokio = { version = "1.38.0", features = ["full"] }
