[package]
name = "mud-bin-examples"
version = { workspace = true }
edition = "2021"

[lints]
workspace = true

[dependencies]
bytes = "1.6.0"
enumeration = { git = "https://github.com/jnbooth/enumeration", version = "0.8.0" }
mud-transformer = { path = "../mud-transformer" }
mud-stream = { path = "../mud-stream", features = ["async", "sync"] }
tokio = { version = "1.38.0", features = ["full"] }
