[package]
name = "mud-bin-examples"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
mud-transformer = { path = "../mud-transformer" }
mud-stream = { path = "../mud-stream", features = ["async", "sync"] }
tokio = { version = "1.48.0", features = ["full"] }
