[package]
name = "mud-stream"
publish = false
version = "0.24.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
mud-transformer = { path = "../mud-transformer" }

[dependencies.tokio]
version = "1.48.0"
features = ["io-util", "net"]
optional = true

[features]
async = ["tokio"]
sync = []
