[package]
name = "mud-transformer"
version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
bytestring = "1.5.0"
flagset = { workspace = true }
flate2 = "1.1.5"
html-escape = { workspace = true }
mxp = { path = "../mxp" }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
postcard = { version = "1.1.3", features = ["use-std"] }

[features]
serde = ["dep:serde", "mxp/serde", "flagset/serde"]
