[package]
name = "mud-transformer"
publish = false
version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["must_cast"] }
bytes = { workspace = true }
bytestring = "1.5.0"
bytestringmut = "1.0.0"
flagset = { workspace = true }
html-escape = { workspace = true }
mxp = { path = '../mxp' }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
zlib-rs = "0.6.3"

[dev-dependencies]
serde_json = "1.0"
postcard = { version = "1.1.3", features = ["use-std"] }

[features]
json = ["dep:serde", "dep:serde_json"]
serde = ["dep:serde", "mxp/serde", "flagset/serde"]
