[package]
name = "mxp"
version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
casefold = { git = "https://github.com/jnbooth/casefold", version = "0.4.0" }
flagset = { workspace = true }
html-escape = { workspace = true }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "flagset/serde"]
