[package]
name = "mxp"
version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
flagset = { workspace = true }
html-escape = { workspace = true }
serde = { workspace = true, optional = true }
uncased = "0.9.10"

[features]
serde = ["dep:serde", "flagset/serde"]
