[package]
name = "mxp"
version = "1.2.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "README.md"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
description = "Rust implementation of the MXP (Mud eXtension Protocol) standard"

[lints]
workspace = true

[dependencies]
flagset = { workspace = true }
html-escape = { workspace = true }
serde = { workspace = true, optional = true }
uncased = "0.9.10"

[features]
serde = ["dep:serde", "flagset/serde"]
